# openstack-vm-api

./: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  LICENSE  Makefile  README.md  ROADMAP.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  config.py  database.py  main.py
app/api/: __init__.py
app/api/v1/: __init__.py  router.py
app/api/v1/endpoints/: __init__.py  flavors.py  health.py  images.py  vms.py
app/core/: __init__.py  exceptions.py  openstack_client.py  security.py
app/models/: __init__.py  vm.py
app/schemas/: __init__.py  common.py  vm.py
app/services/: __init__.py  vm_service.py
tests/: __init__.py  conftest.py  test_api_endpoints.py
